--- a/HTML/index.html
+++ b/HTML/index.html
@@ -32,7 +32,7 @@
 <header>
     <nav class="navbar navbar-default navbar-fixed-top">
 
-        <div  class="container">
+        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
@@ -54,43 +54,43 @@
         </div>
     </nav>
     <div id="caption">
-    <h1>snkrGllry</h1>
+        <h1>snkrGllry</h1>
     </div>
 </header>
 
 
 <section class="carouselBox">
 
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img  class="img-responsive"src="../img/carousel1.jpg" alt="First slide">
-                        </div>
-                        <div class="item">
-                            <img class="img-responsive src=" src="../img/carousel2.jpg" alt="Second slide">
 
-                        </div>
-                        <div class="item">
-                            <img class="img-responsive" src="../img/carousel3.jpg" alt="Third slide">
-
-                        </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img class="img-responsive" src="../img/carousel1.jpg" alt="First slide">
                     </div>
-                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span></a><a class="right carousel-control"
-                                                                                     href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
-                        </span></a>
-                </div>
+                    <div class="item">
+                        <img class="img-responsive src=" src="../img/carousel2.jpg" alt="Second slide">
 
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive" src="../img/carousel3.jpg" alt="Third slide">
+
+                    </div>
+                </div>
+                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span></a>
+                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
+
         </div>
+    </div>
 
 
 </section>
@@ -244,7 +244,7 @@
 <section>
     <div class="container">
 
-        <div class="row rowBox" >
+        <div class="row rowBox">
 
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
                 <a href="viewPicByClick.html">
@@ -307,7 +307,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
-                <a  href="viewPicByClick.html">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
@@ -375,8 +375,6 @@
 
 
 <footer class="footer-bottom">
-
-
 
 
     <div class="navbar navbar-default nav-links navbar-static-bottom">
