--- a/HTML/news.html
+++ b/HTML/news.html
@@ -27,7 +27,7 @@
 <header>
     <nav class="navbar navbar-default navbar-fixed-top">
 
-        <div  class="container">
+        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
@@ -62,25 +62,33 @@
 
         <div>
             <div class="col-xs-12 col-lg-6 thumb">
-                <h2>Release Ronnie Fieg x Asics GLV Cove</h2>
+                <h2>1.000 $ für den Nike Air Hyperadapt?!</h2>
                 <figure>
-                    <img class="img-responsive" src="../img/IMG_5109.JPG">
-                    <figcaption>Ronnie Fieg x Asics GLV Cove</figcaption>
+                    <img class="img-responsive" src="../img/news1.jpg">
+
+                    <figcaption>Nike Air Hyperadapt</figcaption>
                 </figure>
                 <article>
-                    <h3>Release Information</h3>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                        tempor
-                        invidunt ut labore
-                        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                        dolores et ea
-                        rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                        Lorem ipsum
-                        dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                        labore et dolore
-                        magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-                        rebum. Stet
-                        clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                    <h3>Kostet der Nike Air Hyperadapt wirklich 1.000 US-Dollar</h3>
+
+                    <p>Seit einigen Tagen ist klar, dass bereits in diesem Monat der selbstschnürende Nike Hyperadapt
+                        released werden soll.
+                    </p>
+                    <p>Teilweise gab es ja schon einige Infos und Videos zu dem Schuh, nur der
+                        Preis hat bisher gefehlt.
+                    </p>
+
+                    <p>Gestern bin ich bei Instagram über einen Beitrag von sneakernews.com gestolpert, in dem
+                        behauptet wird, dass der Nike Hyperadapt einen UVP von rund 1.000 US-Dollar haben soll. Für uns
+                        in Europa würde der Schuh dann natürlich 1.000 Euro kosten, da die Preise meist ja 1 zu 1
+                        übertragen werden. Die Voraussetzung wäre natürlich ein europäischer Release, von dem ich bisher
+                        aber noch nichts erfahren habe.
+                    </p>
+
+                    <p>Sollte der Hyperadapt wirklich so teuer sein, bin ich definitiv raus. So schön die Innovation
+                        auch sein mag, der Preis ist für einen TURNSCHUH einfach viel zu hoch – egal welch tolle
+                        Innovationen das gute Stück beherbergt.
+                    </p>
 
 
                 </article>
@@ -92,24 +100,35 @@
 
         <div>
             <div class="col-xs-12 col-lg-6  thumb">
-                <h2>Release Ultraboost Multicolor 2.0</h2>
+                <h2>Year of the Court</h2>
                 <figure>
-                    <img class="img-responsive" src="../img/IMG_5087.JPG">
-                    <figcaption>Adidas Ultraboost Multicolor 2.0</figcaption>
+                    <img class="img-responsive" src="../img/news2.jpg">
+                    <figcaption>Reebok Classic x Solebox Club C85</figcaption>
                 </figure>
                 <article>
                     <h3>Release Information</h3>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                        invidunt ut labore
-                        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                        dolores et ea
-                        rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                        Lorem ipsum
-                        dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                        labore et dolore
-                        magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-                        rebum. Stet
-                        clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                    <p>Der Reebok Club C ist für mich der heimliche Nachfolger des legendären Stan Smith von adidas.
+                        Selbst ich, ein Typ der eigentlich nur auf Runner steht, feier das Modell schon seit einigen
+                        Monaten.
+                    </p>
+
+                    <p>
+                        Die Solebox Kollabo auf dem Reebok Club C durfte ich glücklicherweise schon vor einiger Zeit
+                        bestaunen. Wo, wann und mit wem ist an dieser Stelle egal, aber schon damals war ich direkt
+                        Feuer und Flamme für das Ding.
+                    </p>
+                    <p>
+                        Das Obermaterial des Reebok Club C 85 wurde von Solebox aus verschiedenen Lederstücken
+                        konstruiert. Ziel war es, den Look eines Tennisschlägergriffs nachzuempfinden. Der komplette
+                        Sneaker ist in einem türkisfarbenen Colourway gehalten und wird nur von dem roten Details auf
+                        der Zunge und der Mittelsohle akzentuiert.
+                    </p>
+                    <p>
+                        Der Release des Reebok Club C 85 x Solebox soll diese Woche, am 11. November 2016, in Berlin,
+                        München und Wie3n stattfinden. Der Retailpreis wird bei 130,00 € liegen. Neben dem Schuh,
+                        enthält das Pack noch eine schwarze Cap, mit dem ihr euer Outfit perfekt abrunden könnt.
+                        #soleboxallover
+                    </p>
                 </article>
             </div>
         </div>
@@ -120,8 +139,6 @@
 
 
 <footer class="footer-bottom">
-
-
 
 
     <div class="navbar navbar-default nav-links navbar-static-bottom">
