--- a/HTML/news.html
+++ b/HTML/news.html
@@ -106,7 +106,7 @@
                     <figcaption>Reebok Classic x Solebox Club C85</figcaption>
                 </figure>
                 <article>
-                    <h3>Release Information</h3>
+                    <h3>#soleboxallover</h3>
                     <p>Der Reebok Club C ist für mich der heimliche Nachfolger des legendären Stan Smith von adidas.
                         Selbst ich, ein Typ der eigentlich nur auf Runner steht, feier das Modell schon seit einigen
                         Monaten.
@@ -125,7 +125,7 @@
                     </p>
                     <p>
                         Der Release des Reebok Club C 85 x Solebox soll diese Woche, am 11. November 2016, in Berlin,
-                        München und Wie3n stattfinden. Der Retailpreis wird bei 130,00 € liegen. Neben dem Schuh,
+                        München und Wi3n stattfinden. Der Retailpreis wird bei 130,00 € liegen. Neben dem Schuh,
                         enthält das Pack noch eine schwarze Cap, mit dem ihr euer Outfit perfekt abrunden könnt.
                         #soleboxallover
                     </p>
@@ -133,7 +133,90 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div>
+            <div class="col-xs-12 col-lg-6 thumb">
+                <h2>"Exploring Cologne" mit Sneakerbob und Sizetenplease"</h2>
+                <figure>
+                    <img class="img-responsive" src="../img/news3.jpg">
 
+                    <figcaption>Adidas Gazelle</figcaption>
+                </figure>
+                <article>
+                    <h3>Kostet der Nike Air Hyperadapt wirklich 1.000 US-Dollar</h3>
+
+                    <p>Sicherlich habt ihr mitbekommen, dass ich letzte Woche wieder in der Domstadt Köln unterwegs war
+                        und mit meinen Homies sneakerb0b und Sizetenplease ein bisschen die Stadt unsicher gemacht habe.
+                    </p>
+                    <p>
+                        Für mich persönlich, als Junge aus einer echten Kleinstadt, ist so ein Tag immer eine verdammt
+                        coole Sache. Krefeld bietet architektonisch leider zu wenig um spannende Motive zu kreieren oder
+                        die Stadt zu erkunden. Wir haben ja nicht mal eine U-Bahn, geschweige denn die Stationen dazu.
+                        Köln eignet sich dafür perfekt, vor allem mit all den Parkhäusern, Dächern und neu gebauten
+                        U-Bahn Stationen an verschiedenen Punkten der Stadt.
+                    </p>
+                    <p>
+                        Mit Massimo, der an dem Tag für die Bilder verantwortlich war, hatten wir auf jeden Fall einen
+                        super
+                        guten Photographen dabei, der vor allem in den letzten Monaten häufig vom Praise Mag, Hypebeast
+                        und
+                        einigen weiteren Magazinen gefeatured wurde.
+                    </p>
+                    <p>
+                        Ich hatte für diesen Tag einiges an Klamotten und neuen Sneakern dabei, die ich natürlich auch
+                        sehr
+                        gerne spazieren geführt habe. Natürlich ist es schon etwas merkwürdig sich bei strahlendem
+                        Sonnenschein in irgendeiner Parkhausecke umzuziehen, aber für ein perfektes Bild lasse ich auch
+                        gerne diese peinlichen Momente über mich ergehen.
+                    </p>
+
+
+                </article>
+            </div>
+
+
+        </div>
+        <div>
+            <div class="col-xs-12 col-lg-6 thumb">
+                <h2>Nike Free Flyknit Mercurial All White - on Feet via Solebox</h2>
+                <figure>
+                    <img class="img-responsive" src="../img/news4.jpg">
+
+                    <figcaption>Nike Free Flyknit</figcaption>
+                </figure>
+                <article>
+                    <h3>Solebox haut die ersten on Feet Bilder raus!</h3>
+
+                    <p>Den Nike Free Flyknit Mercurial feiere ich schon seit einigen Wochen ( oder Monaten? ) auf meinem
+                        Blog ab. Bisher konnte ich mich mit dem Modell nicht so wirklich identifizieren, aber seit
+                        bekannt ist, dass die Silhouette auch in einem sommerlichen All White kommt, bin ich Feuer und
+                        Flamme.
+                    </p>
+                    <p>
+
+                        Solebox hat jetzt die ersten on feet Bilder vom Nike Free Flyknit Mercurial All White
+                        rausgehauen, die wie immer erste Sahne sind. Selbstverständlich sogar, da #pangeaapproved.
+                        Eigentlich würde ich bei dem Modell auf jeden Fall zuschlagen, bin mir aber nicht sicher ob mir
+                        die angebrachte Socke im Sommer zu warm ist?! Mein Magista ist ja ein ziemlich ähnlicher Schuh,
+                        da geht es eigentlich. Optimal ist es sicherlich nicht, aber absolut auszuhalten. Da ist so ein
+                        Vollleder Gel Lyte III beispielsweise deutlich schlimmer. Vielleicht kann mir ja einer von euch
+                        einen Rat geben was den Nike Free Flyknit Mercurial All White angeht. Wäre nett, weil dann
+                        entschiede ich morgen spontan ob ich den ranhole.
+                    </p>
+                    <p>
+
+                        Hier die Bilder und die ersten Stores für den Release morgen um 09:00:
+                        <a href="http://www.deadstock.de/release/nike-free-flyknit-mercurial-all-white/">
+                            http://www.deadstock.de/release/nike-free-flyknit-mercurial-all-white/
+                        </a>
+                    </p>
+                </article>
+            </div>
+
+
+        </div>
+    </div>
+    </div>
 
 </section>
 
