--- a/HTML/index.html
+++ b/HTML/index.html
@@ -60,39 +60,41 @@
 
 
 <section class="carouselBox">
+    <div class="container">
 
+        <div class="row">
+            <div class="col-xs-12">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img class="img-responsive" src="../img/carousel1.jpg" alt="First slide"><img
+                                    src="../img/IMG_5059.JPG"/>
+                        </div>
 
-    <div class="row">
-        <div class="col-xs-12">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img class="img-responsive" src="../img/carousel1.jpg" alt="First slide">
+                        div class="item">
+                            <img class="img-responsive src=" src="../img/carousel2.jpg" alt="Second slide">
+
+                        </div>
+                        <div class="item">
+                            <img class="img-responsive" src="../img/carousel3.jpg" alt="Third slide">
+
+                        </div>
                     </div>
-                    <div class="item">
-                        <img class="img-responsive src=" src="../img/carousel2.jpg" alt="Second slide">
-
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive" src="../img/carousel3.jpg" alt="Third slide">
-
-                    </div>
+                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span></a>
+                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span></a>
                 </div>
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span></a>
-                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span></a>
+
             </div>
-
         </div>
+
     </div>
-
-
 </section>
 
 
