--- a/HTML/login.html
+++ b/HTML/login.html
@@ -53,7 +53,7 @@
 </header>
 
 
-<section>
+<section class="loginSectionBox">
 
     <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
                         <input type="password" class="form-control" id="registerPassword" placeholder="Password">
                     </div>
 
-                    <div class="col-xs-12">
+                    <div class="col-lg-2 col-xs-12 loginButtonBox">
                         <a href="index.html" class="btn " role="button">Register</a>
                     </div>
                 </form>
