--- a/HTML/index.html
+++ b/HTML/index.html
@@ -61,7 +61,6 @@
 
 <section class="carouselBox">
     <div class="container">
-
         <div class="row">
             <div class="col-xs-12">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -72,11 +71,10 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="../img/carousel1.jpg" alt="First slide"><img
-                                    src="../img/IMG_5059.JPG"/>
+                            <img class="img-responsive" src="../img/carousel1.jpg" alt="First slide">
                         </div>
 
-                        div class="item">
+                        <div class="item">
                             <img class="img-responsive src=" src="../img/carousel2.jpg" alt="Second slide">
 
                         </div>
@@ -90,10 +88,8 @@
                     <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
                         <span class="glyphicon glyphicon-chevron-right"></span></a>
                 </div>
-
             </div>
         </div>
-
     </div>
 </section>
 
