--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -81,7 +81,7 @@
                 <div class="col-lg-6 col-sm-6 col-xs-12 ">
                     <h2>Contact Formular</h2>
                     <div class="form-group">
-                        <label for="username">Name: </label>
+                        <label for="username">Name:     </label>
                         <input type="text" id="username">
                     </div>
                 </div>
@@ -104,7 +104,7 @@
 
                 <div class="col-xs-12 col-sm-6 col-lg-6">
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Send</button>
+                        <button type="submit" class="btn">Send</button>
                     </div>
                 </div>
             </form>
