--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -28,7 +28,7 @@
 <header>
     <nav class="navbar navbar-default navbar-fixed-top">
 
-        <div  class="container">
+        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
@@ -55,39 +55,39 @@
 </header>
 
 
-<section>
+<section class="profileBox">
     <div class="container">
         <div class="row">
 
 
-            <div class="col-xs-12">
+            <div class="col-xs-12 titelbild">
                 <figure>
                     <a href="viewPicByClick.html">
-                        <img class="img-responsive" src="../img/IMG_5109.JPG" width="800" height="120">
+                        <img class="img-responsive" src="../img/titelbild.jpg">
                     </a>
                 </figure>
             </div>
 
 
-            <div class="col-xs-12 col-sm-3">
+            <div class="col-xs-12 col-sm-2">
                 <figure>
                     <img class="image-responsive" src="../img/profilPic.jpg" height="130" width="130"/>
 
                 </figure>
             </div>
 
-            <div class="col-xs-12 col-sm-9">
+            <div class="col-xs-12 col-sm-10">
                 <label for="username">Username: </label>
-                <span id="username">MaxMuster</span><br>
+                <span id="username">laaaarsi</span><br>
 
                 <label for="lastLogin">Registred since: </label>
-                <span id="lastLogin">12.12.12</span><br>
+                <span id="lastLogin">12.11.2016</span><br>
 
                 <label for="location">Location: </label>
-                <span id="location">Heimhausen</span><br>
+                <span id="location">Konstanz</span><br>
 
                 <label for="instagram">Instagram: </label>
-                <span id="instagram">instagramProfilname</span><br>
+                <span id="instagram">laaaarsi</span><br>
 
                 <label for="likes">Total likes: </label>
                 <span id="likes">1000</span>
@@ -98,19 +98,7 @@
                 <div class="col-xs-12">
                     <h2>About me</h2>
 
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut
-                        labore et
-                        dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-                        rebum. Stet
-                        clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor
-                        sit
-                        amet,
-                        consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                        aliquyam erat,
-                        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-                        gubergren, no
-                        sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                    <p>Hi my name is Lars and Iam one of the creators of this website and a sneaker-enthusiast since 2013.</p>
                 </div>
             </article>
 
@@ -277,8 +265,8 @@
 
 <section>
     <div class="container">
-
-        <div class="row rowBox" >
+        <h2>My Pictures</h2>
+        <div class="row rowBox">
 
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
                 <a href="viewPicByClick.html">
@@ -341,7 +329,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
-                <a  href="viewPicByClick.html">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
                 <div class="likeAndCommentBox">
@@ -393,16 +381,7 @@
                     <p>123 Likes</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
-                <a href="viewPicByClick.html">
-                    <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
-                </a>
-                <div class="likeAndCommentBox">
-                    <span class="glyphicon glyphicon-thumbs-up"></span>
-                    <span class="glyphicon glyphicon-comment"></span>
-                    <p>123 Likes</p>
-                </div>
-            </div>
+
         </div>
     </div>
 </section>
@@ -425,11 +404,7 @@
 </section>
 
 
-
-
 <footer class="footer-bottom">
-
-
 
 
     <div class="navbar navbar-default nav-links navbar-static-bottom">
