--- a/HTML/viewPicByClick.html
+++ b/HTML/viewPicByClick.html
@@ -55,23 +55,17 @@
 </header>
 
 
-<section>
+<section class="PicByClickBox">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="row-centered col-xs-12">
                 <figure>
-                    <img class="img-responsive" src="../img/IMG_5109.jpg">
+                    <img class="img-responsive" src="../img/IMG_5109.jpg" height="1050" width="700">
                 </figure>
-                <div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/heartLogo.png" alt="" width="30" height="30">
-                    </div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/sprechblase.png" alt="" width="35" height="35">
-                    </div>
-                    <div class="likeComment">
-                        <p>123 Likes</p>
-                    </div>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
                 </div>
             </div>
 
