--- a/HTML/about.html
+++ b/HTML/about.html
@@ -12,10 +12,12 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
+
     <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 
+    <link rel="stylesheet" type="text/css" href="../CSS/mainStylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
 
     <title>snkrGllry</title>
 
@@ -27,7 +29,7 @@
 <header>
     <nav class="navbar navbar-default navbar-fixed-top">
 
-        <div  class="container">
+        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
@@ -54,14 +56,16 @@
 </header>
 
 
-
 <section>
     <section>
         <div class="container">
-            <div class="row">
+            <div class="row aboutBox">
                 <div class="col-xs-12">
                     <h2>About Us</h2>
-                    <p>We started this project with the intention to give Sneaker Enthusiast a platform to share there on feet pictures</p>
+                    <p>We started this project with the intention to give Sneaker Enthusiast a platform to share there
+                        pictures with the sneaker community and give them a room to discuss and get inspired. Manuel and
+                        I started this project for a subject at the HTWG Konstanz.
+                    </p>
                 </div>
             </div>
         </div>
@@ -72,9 +76,8 @@
 </section>
 
 
-<<footer class="footer-bottom">
-
-
+<
+<footer class="footer-bottom">
 
 
     <div class="navbar navbar-default nav-links navbar-static-bottom">
